# PS201

./: .gitignore  Firmware.md  How to set up linux dev machine.txt  README  README.md  Specifications  serialLink.md  specifications.md
Firmware/: ADC.c  ADC.h  ADC.lst  CHARGEPUMP.c  CHARGEPUMP.h  DAC.c  DAC.h  DEVICE.c  DEVICE.h  DISPLAY.c  DISPLAY.h  Debug.c  Debug.h  Device.c  Device.h  Display.c  Display.h  EEPROM.c  EEPROM.h  IOHandler.c  IOHandler.h  IOMapping.h  LCD.c  LCD.h  LCD.lst  MAIN.c  MAIN.h  Makefile  PS201.cbp  SERIAL.c  SERIAL.h  SPI.c  SPI.h  SW.c  SW.h  SW.lst  SWITCH.c  SWITCH.h  SerialParser.c  SerialParser.h  (+27 more)
PsController/: DataLayer.py  Dialogs.py  PsController.iss  PsController.py  PsGui.py  SequenceLineFrame.py  SerialCommunication.py  createExe.py  createInstall.bat  createInstall.py  serialTest.py  setup.py
PsController/PsController/: PsController.py  __main__.py  createExe.py
PsController/examples/: NonDesctructiveLedTesting.py  VoltageIncrement.txt
PsController/installed dependencies/: crcmod-1.7.win32-py3.1.msi  cx_Freeze-4.3.2.win32-py3.3.msi
PsController/installed dependencies/APScheduler-2.1.1/: PKG-INFO  setup.cfg
Python/: AboutDialog.py  Arduino.py  ArduinoCmd.py  ArduinoGui.py  AutoScrollbarFrame.py  DataLayer.py  Dialogs.py  ExtendedEntry.py  PsController.py  PsGui.py  Psp200Gui.py  PspController.py  PspGui.py  RampDialog.py  ScheduleLine.py  ScheduleLineFrame.py  SequenceLine.py  SequenceLineFrame.py  SerialCommunication.py  ThreadHelper.py  Todo.txt  setup.py
Software/: createExecutables.py  psControllerMain.py  setup.py
(+77 files in other folders)
