[files]
packages = 
	apscheduler
	apscheduler.jobstores
	apscheduler.triggers
	apscheduler.triggers.cron
extra_files = 
	setup.py
	README.rst
	recursive-include examples *.py
	recursive-include tests *.py
	recursive-include docs *.rst *.py

[build_sphinx]
build-dir = docs/_build
source-dir = docs

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0

[upload_docs]
upload-dir = docs/_build/html

[metadata]
description-file = README.rst
name = APScheduler
author = Alex Grönholm
requires-python = >=2.4
home-page = http://pypi.python.org/pypi/APScheduler/
summary = In-process task scheduler with Cron-like capabilities
version = 2.0.3
keywords = scheduling cron
classifiers = Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python
	Programming Language :: Python :: 2.4
	Programming Language :: Python :: 2.5
	Programming Language :: Python :: 2.6
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.1
	Programming Language :: Python :: 3.2
	Programming Language :: Python :: 3.3
author-email = apscheduler@nextday.fi

